src/index.css
* {
  box-sizing: border-box;
}

@font-face {
  font-family: "Zaslia";
  src: url("../src/assets/fonts/zaslia/Zaslia.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #0d0d0d;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

::-webkit-scrollbar {
  display: none;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

body {
  margin: 0;
  padding: 0;
}

